--- a/index.html
+++ b/index.html
@@ -10,7 +10,142 @@
     <link href='https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
   </head>
 <body>
-  <h1>Hola</h1>
+  <nav id="navbar" class="navbar navbar-default">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable_nav" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <h1 class="navbar-brand text-left">Food, LLC</h1>
+      </div>
+      <div id="collapsable_nav" class="collapse navbar-collapse">
+        <ul id="nav-list" class="nav navbar-nav navbar-right">
+         <li class="text-center">
+           <a href="#" class="visible-xs">
+             <span class="glyphicon glyphicon-hand-right"></span> Chicken</a>
+         </li>
+         <li class="text-center">
+           <a href="#" class="visible-xs">
+             <span class="glyphicon glyphicon-hand-right"></span><br class="hidden-xs"> Beef</a>
+         </li>
+         <li class="text-center">
+           <a href="#" class="visible-xs">
+             <span class="glyphicon glyphicon-hand-right"></span><br class="hidden-xs"> Sushi</a>
+         </li>
+       </ul><!-- #nav-list -->
+     </div><!-- .collapse .navbar-collapse -->
+
+    </div>
+  </nav>
+
+  <div class="container">
+
+    <h1 class="text-center" id="titulo">Our Menu</h1>
+
+    <div class="row" id="cajaTexto">
+      <h2 class="text-center">Chicken</h2>
+      <section class="text-justify col-xs-12">
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+        Perspiciatis repellendus modi cumque, accusamus aspernatur, 
+        dolore et error ab facere dignissimos mollitia quia fuga rem nemo ea? 
+        Dolore iusto ad assumenda.
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+        Perspiciatis repellendus modi cumque, accusamus aspernatur, 
+        dolore et error ab facere dignissimos mollitia quia fuga rem nemo ea? 
+        Dolore iusto ad assumenda.
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+        Perspiciatis repellendus modi cumque, accusamus aspernatur, 
+        dolore et error ab facere dignissimos mollitia quia fuga rem nemo ea? 
+        Dolore iusto ad assumenda.
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+        Perspiciatis repellendus modi cumque, accusamus aspernatur, 
+        dolore et error ab facere dignissimos mollitia quia fuga rem nemo ea? 
+        Dolore iusto ad assumenda.
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+        Perspiciatis repellendus modi cumque, accusamus aspernatur, 
+        dolore et error ab facere dignissimos mollitia quia fuga rem nemo ea? 
+        Dolore iusto ad assumenda.
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+        Perspiciatis repellendus modi cumque, accusamus aspernatur, 
+        dolore et error ab facere dignissimos mollitia quia fuga rem nemo ea? 
+        Dolore iusto ad assumenda.
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+        Perspiciatis repellendus modi cumque, accusamus aspernatur, 
+        dolore et error ab facere dignissimos mollitia quia fuga rem nemo ea? 
+        Dolore iusto ad assumenda.
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+        Perspiciatis repellendus modi cumque, accusamus aspernatur, 
+        dolore et error ab facere dignissimos mollitia quia fuga rem nemo ea? 
+        Dolore iusto ad assumenda.
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+        Perspiciatis repellendus modi cumque, accusamus aspernatur, 
+        dolore et error ab facere dignissimos mollitia quia fuga rem nemo ea? 
+        Dolore iusto ad assumenda.
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+        Perspiciatis repellendus modi cumque, accusamus aspernatur, 
+        dolore et error ab facere dignissimos mollitia quia fuga rem nemo ea? 
+        Dolore iusto ad assumenda.
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+        Perspiciatis repellendus modi cumque, accusamus aspernatur, 
+        dolore et error ab facere dignissimos mollitia quia fuga rem nemo ea? 
+        Dolore iusto ad assumenda.
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+        Perspiciatis repellendus modi cumque, accusamus aspernatur, 
+        dolore et error ab facere dignissimos mollitia quia fuga rem nemo ea? 
+        Dolore iusto ad assumenda.
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+        Perspiciatis repellendus modi cumque, accusamus aspernatur, 
+        dolore et error ab facere dignissimos mollitia quia fuga rem nemo ea? 
+        Dolore iusto ad assumenda.
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+        Perspiciatis repellendus modi cumque, accusamus aspernatur, 
+        dolore et error ab facere dignissimos mollitia quia fuga rem nemo ea? 
+        Dolore iusto ad assumenda.
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+        Perspiciatis repellendus modi cumque, accusamus aspernatur, 
+        dolore et error ab facere dignissimos mollitia quia fuga rem nemo ea? 
+        Dolore iusto ad assumenda.
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+        Perspiciatis repellendus modi cumque, accusamus aspernatur, 
+        dolore et error ab facere dignissimos mollitia quia fuga rem nemo ea? 
+        Dolore iusto ad assumenda.
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+        Perspiciatis repellendus modi cumque, accusamus aspernatur, 
+        dolore et error ab facere dignissimos mollitia quia fuga rem nemo ea? 
+        Dolore iusto ad assumenda.
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+        Perspiciatis repellendus modi cumque, accusamus aspernatur, 
+        dolore et error ab facere dignissimos mollitia quia fuga rem nemo ea? 
+        Dolore iusto ad assumenda.
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+        Perspiciatis repellendus modi cumque, accusamus aspernatur, 
+        dolore et error ab facere dignissimos mollitia quia fuga rem nemo ea? 
+        Dolore iusto ad assumenda.
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+        Perspiciatis repellendus modi cumque, accusamus aspernatur, 
+        dolore et error ab facere dignissimos mollitia quia fuga rem nemo ea? 
+        Dolore iusto ad assumenda.
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+        Perspiciatis repellendus modi cumque, accusamus aspernatur, 
+        dolore et error ab facere dignissimos mollitia quia fuga rem nemo ea? 
+        Dolore iusto ad assumenda.
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+        Perspiciatis repellendus modi cumque, accusamus aspernatur, 
+        dolore et error ab facere dignissimos mollitia quia fuga rem nemo ea? 
+        Dolore iusto ad assumenda.
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+        Perspiciatis repellendus modi cumque, accusamus aspernatur, 
+        dolore et error ab facere dignissimos mollitia quia fuga rem nemo ea? 
+        Dolore iusto ad assumenda.
+      </section>  
+    </div>
+
+
+  </div>
+
   <!-- jQuery (Bootstrap JS plugins depend on it) -->
   <script src="js/jquery-2.1.4.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
