--- a/index.html
+++ b/index.html
@@ -41,106 +41,81 @@
     </div>
   </nav>
 
-  <div class="container">
+  <div class="container" id="mainContent">
 
     <h1 class="text-center" id="titulo">Our Menu</h1>
 
-    <div class="row" id="cajaTexto">
-      <h2 class="text-center">Chicken</h2>
-      <section class="text-justify col-xs-12">
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-        Perspiciatis repellendus modi cumque, accusamus aspernatur, 
-        dolore et error ab facere dignissimos mollitia quia fuga rem nemo ea? 
-        Dolore iusto ad assumenda.
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-        Perspiciatis repellendus modi cumque, accusamus aspernatur, 
-        dolore et error ab facere dignissimos mollitia quia fuga rem nemo ea? 
-        Dolore iusto ad assumenda.
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-        Perspiciatis repellendus modi cumque, accusamus aspernatur, 
-        dolore et error ab facere dignissimos mollitia quia fuga rem nemo ea? 
-        Dolore iusto ad assumenda.
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-        Perspiciatis repellendus modi cumque, accusamus aspernatur, 
-        dolore et error ab facere dignissimos mollitia quia fuga rem nemo ea? 
-        Dolore iusto ad assumenda.
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-        Perspiciatis repellendus modi cumque, accusamus aspernatur, 
-        dolore et error ab facere dignissimos mollitia quia fuga rem nemo ea? 
-        Dolore iusto ad assumenda.
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-        Perspiciatis repellendus modi cumque, accusamus aspernatur, 
-        dolore et error ab facere dignissimos mollitia quia fuga rem nemo ea? 
-        Dolore iusto ad assumenda.
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-        Perspiciatis repellendus modi cumque, accusamus aspernatur, 
-        dolore et error ab facere dignissimos mollitia quia fuga rem nemo ea? 
-        Dolore iusto ad assumenda.
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-        Perspiciatis repellendus modi cumque, accusamus aspernatur, 
-        dolore et error ab facere dignissimos mollitia quia fuga rem nemo ea? 
-        Dolore iusto ad assumenda.
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-        Perspiciatis repellendus modi cumque, accusamus aspernatur, 
-        dolore et error ab facere dignissimos mollitia quia fuga rem nemo ea? 
-        Dolore iusto ad assumenda.
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-        Perspiciatis repellendus modi cumque, accusamus aspernatur, 
-        dolore et error ab facere dignissimos mollitia quia fuga rem nemo ea? 
-        Dolore iusto ad assumenda.
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-        Perspiciatis repellendus modi cumque, accusamus aspernatur, 
-        dolore et error ab facere dignissimos mollitia quia fuga rem nemo ea? 
-        Dolore iusto ad assumenda.
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-        Perspiciatis repellendus modi cumque, accusamus aspernatur, 
-        dolore et error ab facere dignissimos mollitia quia fuga rem nemo ea? 
-        Dolore iusto ad assumenda.
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-        Perspiciatis repellendus modi cumque, accusamus aspernatur, 
-        dolore et error ab facere dignissimos mollitia quia fuga rem nemo ea? 
-        Dolore iusto ad assumenda.
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-        Perspiciatis repellendus modi cumque, accusamus aspernatur, 
-        dolore et error ab facere dignissimos mollitia quia fuga rem nemo ea? 
-        Dolore iusto ad assumenda.
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-        Perspiciatis repellendus modi cumque, accusamus aspernatur, 
-        dolore et error ab facere dignissimos mollitia quia fuga rem nemo ea? 
-        Dolore iusto ad assumenda.
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-        Perspiciatis repellendus modi cumque, accusamus aspernatur, 
-        dolore et error ab facere dignissimos mollitia quia fuga rem nemo ea? 
-        Dolore iusto ad assumenda.
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-        Perspiciatis repellendus modi cumque, accusamus aspernatur, 
-        dolore et error ab facere dignissimos mollitia quia fuga rem nemo ea? 
-        Dolore iusto ad assumenda.
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-        Perspiciatis repellendus modi cumque, accusamus aspernatur, 
-        dolore et error ab facere dignissimos mollitia quia fuga rem nemo ea? 
-        Dolore iusto ad assumenda.
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-        Perspiciatis repellendus modi cumque, accusamus aspernatur, 
-        dolore et error ab facere dignissimos mollitia quia fuga rem nemo ea? 
-        Dolore iusto ad assumenda.
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-        Perspiciatis repellendus modi cumque, accusamus aspernatur, 
-        dolore et error ab facere dignissimos mollitia quia fuga rem nemo ea? 
-        Dolore iusto ad assumenda.
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-        Perspiciatis repellendus modi cumque, accusamus aspernatur, 
-        dolore et error ab facere dignissimos mollitia quia fuga rem nemo ea? 
-        Dolore iusto ad assumenda.
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-        Perspiciatis repellendus modi cumque, accusamus aspernatur, 
-        dolore et error ab facere dignissimos mollitia quia fuga rem nemo ea? 
-        Dolore iusto ad assumenda.
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-        Perspiciatis repellendus modi cumque, accusamus aspernatur, 
-        dolore et error ab facere dignissimos mollitia quia fuga rem nemo ea? 
-        Dolore iusto ad assumenda.
-      </section>  
+    <div class="row">
+      <div class="text-justify col-md-4 col-sm-6" id="cajaTexto">
+        <h3 class="text-center">Chicken</h3>
+        <section>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit dolorem sint sequi 
+          delectus iusto aperiam? Rerum sed, rem ducimus, accusantium animi eius eos cum sit 
+          explicabo maiores ratione ex sunt!
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit dolorem sint sequi 
+          delectus iusto aperiam? Rerum sed, rem ducimus, accusantium animi eius eos cum sit 
+          explicabo maiores ratione ex sunt!
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit dolorem sint sequi 
+          delectus iusto aperiam? Rerum sed, rem ducimus, accusantium animi eius eos cum sit 
+          explicabo maiores ratione ex sunt!
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit dolorem sint sequi 
+          delectus iusto aperiam? Rerum sed, rem ducimus, accusantium animi eius eos cum sit 
+          explicabo maiores ratione ex sunt!
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit dolorem sint sequi 
+          delectus iusto aperiam? Rerum sed, rem ducimus, accusantium animi eius eos cum sit 
+          explicabo maiores ratione ex sunt!
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit dolorem sint sequi 
+          delectus iusto aperiam? Rerum sed, rem ducimus, accusantium animi eius eos cum sit 
+          explicabo maiores ratione ex sunt!
+        </section>
+      </div>
+      <div class="text-justify col-md-4 col-sm-6" id="cajaTexto">
+        <h3 class="text-center">Beef</h3>
+        <section>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit dolorem sint sequi 
+          delectus iusto aperiam? Rerum sed, rem ducimus, accusantium animi eius eos cum sit 
+          explicabo maiores ratione ex sunt!
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit dolorem sint sequi 
+          delectus iusto aperiam? Rerum sed, rem ducimus, accusantium animi eius eos cum sit 
+          explicabo maiores ratione ex sunt!
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit dolorem sint sequi 
+          delectus iusto aperiam? Rerum sed, rem ducimus, accusantium animi eius eos cum sit 
+          explicabo maiores ratione ex sunt!
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit dolorem sint sequi 
+          delectus iusto aperiam? Rerum sed, rem ducimus, accusantium animi eius eos cum sit 
+          explicabo maiores ratione ex sunt!
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit dolorem sint sequi 
+          delectus iusto aperiam? Rerum sed, rem ducimus, accusantium animi eius eos cum sit 
+          explicabo maiores ratione ex sunt!
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit dolorem sint sequi 
+          delectus iusto aperiam? Rerum sed, rem ducimus, accusantium animi eius eos cum sit 
+          explicabo maiores ratione ex sunt!
+        </section>
+      </div>
+      <div class="text-justify col-md-4 col-sm-12" id="cajaTexto">
+        <h3 class="text-center">Sushi</h3>
+        <section>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit dolorem sint sequi 
+          delectus iusto aperiam? Rerum sed, rem ducimus, accusantium animi eius eos cum sit 
+          explicabo maiores ratione ex sunt!
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit dolorem sint sequi 
+          delectus iusto aperiam? Rerum sed, rem ducimus, accusantium animi eius eos cum sit 
+          explicabo maiores ratione ex sunt!
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit dolorem sint sequi 
+          delectus iusto aperiam? Rerum sed, rem ducimus, accusantium animi eius eos cum sit 
+          explicabo maiores ratione ex sunt!
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit dolorem sint sequi 
+          delectus iusto aperiam? Rerum sed, rem ducimus, accusantium animi eius eos cum sit 
+          explicabo maiores ratione ex sunt!
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit dolorem sint sequi 
+          delectus iusto aperiam? Rerum sed, rem ducimus, accusantium animi eius eos cum sit 
+          explicabo maiores ratione ex sunt!
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit dolorem sint sequi 
+          delectus iusto aperiam? Rerum sed, rem ducimus, accusantium animi eius eos cum sit 
+          explicabo maiores ratione ex sunt!
+        </section>
+      </div>
+
     </div>
 
 
