--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
       <div id="collapsable_nav" class="collapse navbar-collapse">
         <ul id="nav-list" class="nav navbar-nav navbar-right">
          <li class="text-center">
-           <a href="#" class="visible-xs">
+           <a href="#pollo" class="visible-xs">
              <span class="glyphicon glyphicon-hand-right"></span> Chicken</a>
          </li>
          <li class="text-center">
-           <a href="#" class="visible-xs">
+           <a href="#carne" class="visible-xs">
              <span class="glyphicon glyphicon-hand-right"></span><br class="hidden-xs"> Beef</a>
          </li>
          <li class="text-center">
-           <a href="#" class="visible-xs">
+           <a href="#sushi" class="visible-xs">
              <span class="glyphicon glyphicon-hand-right"></span><br class="hidden-xs"> Sushi</a>
          </li>
        </ul><!-- #nav-list -->
@@ -47,7 +47,7 @@
 
     <div class="row">
       <div class="text-justify col-md-4 col-sm-6" id="cajaTexto">
-        <h3 class="text-center">Chicken</h3>
+        <h3 id="pollo" class="text-center">Chicken</h3>
         <section>
           Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit dolorem sint sequi 
           delectus iusto aperiam? Rerum sed, rem ducimus, accusantium animi eius eos cum sit 
@@ -68,9 +68,10 @@
           delectus iusto aperiam? Rerum sed, rem ducimus, accusantium animi eius eos cum sit 
           explicabo maiores ratione ex sunt!
         </section>
+        <a href="#top">Back to top</a>
       </div>
       <div class="text-justify col-md-4 col-sm-6" id="cajaTexto">
-        <h3 class="text-center">Beef</h3>
+        <h3 id="carne" class="text-center">Beef</h3>
         <section>
           Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit dolorem sint sequi 
           delectus iusto aperiam? Rerum sed, rem ducimus, accusantium animi eius eos cum sit 
@@ -91,9 +92,10 @@
           delectus iusto aperiam? Rerum sed, rem ducimus, accusantium animi eius eos cum sit 
           explicabo maiores ratione ex sunt!
         </section>
+        <a href="#top">Back to top</a>
       </div>
       <div class="text-justify col-md-4 col-sm-12" id="cajaTexto">
-        <h3 class="text-center">Sushi</h3>
+        <h3 id="sushi" class="text-center">Sushi</h3>
         <section>
           Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit dolorem sint sequi 
           delectus iusto aperiam? Rerum sed, rem ducimus, accusantium animi eius eos cum sit 
@@ -114,6 +116,7 @@
           delectus iusto aperiam? Rerum sed, rem ducimus, accusantium animi eius eos cum sit 
           explicabo maiores ratione ex sunt!
         </section>
+        <a href="#top">Back to top</a>
       </div>
 
     </div>
