--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           delectus iusto aperiam? Rerum sed, rem ducimus, accusantium animi eius eos cum sit 
           explicabo maiores ratione ex sunt!
         </section>
-        <a href="#top">Back to top</a>
+        <a class="visible-xs" href="#top">Back to top</a>
       </div>
       <div class="text-justify col-md-4 col-sm-6" id="cajaTexto">
         <h3 id="carne" class="text-center">Beef</h3>
@@ -92,7 +92,7 @@
           delectus iusto aperiam? Rerum sed, rem ducimus, accusantium animi eius eos cum sit 
           explicabo maiores ratione ex sunt!
         </section>
-        <a href="#top">Back to top</a>
+        <a class="visible-xs" href="#top">Back to top</a>
       </div>
       <div class="text-justify col-md-4 col-sm-12" id="cajaTexto">
         <h3 id="sushi" class="text-center">Sushi</h3>
@@ -116,7 +116,7 @@
           delectus iusto aperiam? Rerum sed, rem ducimus, accusantium animi eius eos cum sit 
           explicabo maiores ratione ex sunt!
         </section>
-        <a href="#top">Back to top</a>
+        <a class="visible-xs" href="#top">Back to top</a>
       </div>
 
     </div>
